<?xml version="1.0" encoding="utf-8"?>
<ru.yaal.contexthabit.ui.habit.HabitView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ru.yaal.contexthabit.ui.habit.HabitView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/habitNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/habit_name_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativeMinusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_negative_minus_button_name" />

            <TextView
                android:id="@+id/negativeValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_negative_value_default" />

            <Button
                android:id="@+id/negativePlusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_negative_plus_button_name" />

            <Button
                android:id="@+id/positiveMinusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_positive_minus_button_name" />

            <TextView
                android:id="@+id/positiveValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_positive_value_default" />

            <Button
                android:id="@+id/positivePlusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_positive_plus_button_name" />
        </LinearLayout>
    </LinearLayout>

</ru.yaal.contexthabit.ui.habit.HabitView>